--- a/index.html
+++ b/index.html
@@ -687,13 +687,11 @@
             <h2 class="h2 section-title">Ready For Unforgatable Travel. Remember Us!</h2>
 
             <p class="section-text">
-              Fusce hic augue velit wisi quibusdam pariatur, iusto primis, nec nemo, rutrum. Vestibulum cumque
-              laudantium. Sit ornare
-              mollitia tenetur, aptent.
+              “Everybody wants to reach the peak, but there is no growth on the top of a mountain. It is in the valley that we slog through, the lush grass and rich soil, learning and becoming what enables us to summit life’s next peak.”
             </p>
           </div>
 
-          <button class="btn btn-secondary">Contact Us !</button>
+          <button class="btn btn-secondary" ><a href="tel:+91 8894412884" class="contact-link">Call us!</a></button>
 
         </div>
       </section>
@@ -721,9 +719,7 @@
           </a>
 
           <p class="footer-text">
-            Urna ratione ante harum provident, eleifend, vulputate molestiae proin fringilla, praesentium magna conubia
-            at
-            perferendis, pretium, aenean aut ultrices.
+            “I think, every time I’m on the mountain, I’m just so grateful to be there” 
           </p>
 
         </div>
