Add other changes

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       <section class="tour-search" id="about-us">
         <class class="container">
           
-            <div class="tour-search">
+            <div class="tour-search-about">
               <h1>About Us</h1>
 
             </div>
@@ -243,7 +243,7 @@
 
           <p class="section-subtitle">Uncover place</p>
 
-          <h2 class="h2 section-title">Popular destination</h2>
+          <h2 class="h2 section-title">Popular Expeditions</h2>
 
           <p class="section-text">
           KANG YATSE I-II , MT.SATOPANTH EXPEDITION , DEO TIBBA EXPEDITION ,FRIENDSHIP PEAK EXPEDITION , YUNAM PEAK EXPEDITION ,BLACK PEAK EXPEDITION , MT. CB-13 PEAK EXPEDITION , KANAMO PEAK EXPEDITION , MT. KUN PEAK EXPEDITION , MANIRANG EXPIDITION ,MT. PAPSURA EXPEDITION , REO PURGYIL EXPEDITION , MOUNT SHIVLING EXPEDITION.
@@ -628,9 +628,7 @@
           <h2 class="h2 section-title">Photo's From Travellers</h2>
 
           <p class="section-text">
-            Fusce hic augue velit wisi quibusdam pariatur, iusto primis, nec nemo, rutrum. Vestibulum cumque laudantium.
-            Sit ornare
-            mollitia tenetur, aptent.
+            “We are now in the mountains and they are in us, kindling enthusiasm, making every nerve quiver, filling every pore and cell of us”. 
           </p>
 
           <ul class="gallery-list">
